# MDScope

./: README.md  pyproject.toml
docs/: README.md  implementation-plan.md  phases.md  post-mvp-phases.md
src/mdscope/: __init__.py
src/mdscope/adapters/: __init__.py  mermaid_cli.py  plotext_adapter.py
src/mdscope/cli/: __init__.py  app.py
src/mdscope/core/: __init__.py  capabilities.py  markdown_parser.py  models.py  project_loader.py
src/mdscope/renderers/: __init__.py  chart_renderer.py  code_renderer.py  image_renderer.py  markdown_renderer.py  math_renderer.py  mermaid_renderer.py  table_renderer.py
src/mdscope/services/: __init__.py  file_watcher.py  search_index.py
src/mdscope/ui/: __init__.py  app.py
tests/: test_chart_renderer.py  test_cli.py  test_file_watcher.py  test_image_renderer.py  test_markdown_parser.py  test_markdown_renderer.py  test_math_renderer.py  test_mermaid_adapter.py  test_mermaid_renderer.py  test_plotext_adapter.py  test_project_loader.py  test_search_index.py  test_table_renderer.py  test_ui_app.py
