[project]
name = "mdscope"
version = "0.1.0"
description = "TUI para leer documentacion tecnica en Markdown desde terminal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-it-py>=4.0.0",
    "rich>=14.0.0",
    "textual>=6.2.0",
    "typer>=0.19.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.12.0",
]
charts = [
    "plotext>=5.3.2",
    "textual-plotext>=1.0.1",
]

[project.scripts]
mdscope = "mdscope.cli.app:run"
MDScope = "mdscope.cli.app:run"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdscope"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.mypy]
python_version = "3.12"
packages = ["mdscope"]
mypy_path = ["src"]
strict = true
